--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "build": "npm run lint && ./node_modules/.bin/tsc"
   },
   "author": "Gowtham",
   "license": "ISC"
